# Garbage-Detector-Model

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: combine_datasets.ipynb  executorch.ipynb  test.ipynb  test_executorch.ipynb  train_model.ipynb
notebooks/yolov8n_executorch_model/: metadata.yaml
scripts/: convert_onnx_to_tfjs.sh  download_datasets.sh
