[project]
name = "garbage-detector-model"
version = "0.1.0"
description = "CNN model conversion for React Native"
dependencies = [
    "numpy==1.23.5",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "onnx==1.15.0",
    "tensorflow==2.15.0",
    "tensorflowjs==4.17.0",
    "protobuf==3.20.3",
    "onnx2tf",
    "sng4onnx",
    "onnxsim",
    "ai_edge_litert",
    "ipykernel>=7.1.0",
    "onnx-graphsurgeon>=0.5.8",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {include = ["notebooks*"]}


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Read more here https://beta.ruff.rs/docs/rules/
# By default, Ruff enables Flake8's E and F rules
# Pyflakes - F, pycodestyle - E, W
# flake8-builtins - A
# Pylint - PLC, PLE, PLW
# isort - I
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']

[dependency-groups]
dev = [
    "notebook>=7.5.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]


