[project]
name = "garbage-detector-model"
version = "0.1.0"
description = "CNN model conversion for React Native"
dependencies = [
    "executorch>=1.0.1",
    "notebook>=7.5.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.237",
    "yolo>=0.3.1",
]

readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {include = ["notebooks*"]}


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Read more here https://beta.ruff.rs/docs/rules/
# By default, Ruff enables Flake8's E and F rules
# Pyflakes - F, pycodestyle - E, W
# flake8-builtins - A
# Pylint - PLC, PLE, PLW
# isort - I
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']

[dependency-groups]
dev = [
    "notebook>=7.5.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]


